--- a/etfood-api/src/main/resources/messages.properties
+++ b/etfood-api/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
-PositiveOrZero={0} deve ser um valor maior ou igual a zero
+TaxaFrete={0} deve ser um valor maior que zero e menor que dez
 
 #Cozinha
 cozinha.nome=Nome da cozinha
