--- a/etfood-api/src/main/resources/messages.properties
+++ b/etfood-api/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
 TaxaFrete={0} deve ser um valor maior que zero e menor que dez
+ValorZeroIncluiDescricao={1} deve conter {2}
 
 #Cozinha
 cozinha.nome=Nome da cozinha
